Fixing color shift

--- a/style.css
+++ b/style.css
@@ -50,4 +50,13 @@
 	
 .panel_image {
     margin: 5px;
+	display: grid;
+	place-items: center;
+}
+
+.slider {
+	width: 95%;
+	margin: 5px;
+	display: grid;
+	place-items: center;
 }
